syntax = "proto3";

package proto;

option go_package = "./;proto";

enum Gender {
  GenderNone = 0;
  GenderMan = 1;
  GenderWoman = 2;
}

enum HeroBasicType {
  None = 0;
  BoyWarrior = 8001;
  GirlWarrior = 8002;
  BoyKnight = 8003;
  GirlKnight = 8004;
  BoyRogue = 8005;
  GirlRogue = 8006;
  BoyMage = 8007;
  GirlMage = 8008;
  BoyShaman = 8009;
  GirlShaman = 8010;
  BoyWarlock = 8011;
  GirlWarlock = 8012;
  BoyPriest = 8013;
  GirlPriest = 8014;
}

enum AvatarType {
  AVATAR_TYPE_NONE = 0;
  AVATAR_TRIAL_TYPE = 1;
  AVATAR_LIMIT_TYPE = 2;
  AVATAR_FORMAL_TYPE = 3;
  AVATAR_ASSIST_TYPE = 4;
}

enum ExtraLineupType {
  LINEUP_NONE = 0;
  LINEUP_CHALLENGE = 1;
  LINEUP_ROGUE = 2;
  LINEUP_CHALLENGE_2 = 3;
  LINEUP_CHALLENGE_3 = 4;
  LINEUP_ROGUE_CHALLENGE = 5;
  LINEUP_STAGE_TRIAL = 6;
  LINEUP_ROGUE_TRIAL = 7;
  LINEUP_ACTIVITY = 8;
  LINEUP_BOXING_CLUB = 9;
  LINEUP_TREASURE_DUNGEON = 11;
  LINEUP_CHESS_ROGUE = 12;
  LINEUP_HELIOBUS = 13;
}

enum BattleType{
  Battle_NONE = 0;
  Battle_CHALLENGE = 1;
  Battle_CHALLENGE_Story = 2;
  Battle_ROGUE = 3;
  Battle_TrialActivity = 4;
}

enum LanguageType {
  LANGUAGE_NONE = 0;
  LANGUAGE_SC = 1;
  LANGUAGE_TC = 2;
  LANGUAGE_EN = 3;
  LANGUAGE_KR = 4;
  LANGUAGE_JP = 5;
  LANGUAGE_FR = 6;
  LANGUAGE_DE = 7;
  LANGUAGE_ES = 8;
  LANGUAGE_PT = 9;
  LANGUAGE_RU = 10;
  LANGUAGE_TH = 11;
  LANGUAGE_VI = 12;
  LANGUAGE_ID = 13;
}

enum PlatformType {
  EDITOR = 0;
  IOS = 1;
  ANDROID = 2;
  PC = 3;
  WEB = 4;
  WAP = 5;
  PS4 = 6;
  NINTENDO = 7;
  CLOUD_ANDROID = 8;
  CLOUD_PC = 9;
  CLOUD_IOS = 10;
  PS5 = 11;
  MAC = 12;
  CLOUD_MAC = 13;
  CLOUD_WEB_ANDROID = 20;
  CLOUD_WEB_IOS = 21;
  CLOUD_WEB_PC = 22;
  CLOUD_WEB_MAC = 23;
  CLOUD_WEB_TOUCH = 24;
  CLOUD_WEB_KEYBOARD = 25;
}

enum ServerType {
  SERVICE_NONE = 0;
  SERVICE_NODE = 1;
  SERVICE_GAME = 2;
  SERVICE_GATE = 3;
  SERVICE_DISPATCH = 4;
  SERVICE_MULTI = 5;
  SERVICE_MUIP = 6;
}

enum PlayerStatus {
  PlayerStatus_PreLogin = 0; // 登录前
  PlayerStatus_LoggingIn = 1;// 登录中
  PlayerStatus_PostLogin = 2;// 登录完成
  PlayerStatus_Logout_Wait = 3;//离线等待中
  PlayerStatus_Logout = 4;//离线等待中
}

enum PlayerOfflineReason {
  OFFLINE_NONE = 0; // 正常离线
  OFFLINE_GAME_ERROR = 1; // gs异常
  OFFLINE_REPEAT_LOGIN = 2; // 重复登录
}

enum RogueAreaStatus {
  RogueAreaStatus_ROGUE_AREA_STATUS_LOCK = 0;
  RogueAreaStatus_ROGUE_AREA_STATUS_UNLOCK = 1;
  RogueAreaStatus_ROGUE_AREA_STATUS_FIRST_PASS = 2;
  RogueAreaStatus_ROGUE_AREA_STATUS_CLOSE = 3;
}

enum RoomStatus{
  RogueRoomStatus_ROGUE_ROOM_STATUS_NONE = 0;
  RogueRoomStatus_ROGUE_ROOM_STATUS_LOCK = 1;
  RogueRoomStatus_ROGUE_ROOM_STATUS_UNLOCK = 2;
  RogueRoomStatus_ROGUE_ROOM_STATUS_PLAY = 3;
  RogueRoomStatus_ROGUE_ROOM_STATUS_FINISH = 4;
}

enum Retcode {
  RET_SUCC = 0; // 成功
  RET_FAIL = 1; // 失败
  RET_PLAYER_DATA_ERROR = 2; // 玩家数据损坏
  RET_NODE_ERR = 3; // node意外离线
  RET_PLAYER_ID_ERR = 4; // 玩家id缺失
  RET_PLAYER_TIMEOUT = 5; //玩家超时
  RET_PLAYER_LOGOUT = 6; // 玩家离线
  RET_PLAYER_REPEAT_LOGIN = 7;//重复登录
  RET_PLAYER_GATE_REPEAT_LOGIN = 8;//同网关重复登录
  RET_PLAYER_GAME_LOGIN = 9;//game告知需要离线
  RET_PLAYER_SYSTEM_ERROR = 10;//内部服务异常离线（不就是gate或者game玩家线程崩坏了
}